tests/ui/parser/recover/recover-for-loop-parens-around-head.stderr
error: expected one of `)`, `,`, `@`, or `|`, found keyword `in`
  --> $DIR/recover-for-loop-parens-around-head.rs:10:16
   |
LL |     for ( elem in vec ) {
   |                ^^ expected one of `)`, `,`, `@`, or `|`

error: aborting due to previous error

